# Rust_Ajax_BBS

./: Cargo.toml
src/: forms.rs  main.rs  models.rs  temp.rs  view.rs
static/: bbs.js
templates/: bbs.html  community.html
