[package]
name = "ajax-bbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-session = "0.7.2"
actix-web = "4.4.0"
askama = "0.12.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.188"
serde_derive = "1.0.188"
